fixed broken images

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Deejay</h2>
-								<span class="image main"><img src="../portfolio/images/deejayimg.jpg" alt="image of different people's hands holding up different" /></span>
+								<span class="image main"><img src="images/deejayimg.jpg" alt="image of different people's hands holding up different" /></span>
 								<p>Dev by Day! Musician by night! Husband and Father Extroardinaire Always!</p>
-								<span class="image main"><img id="deejaypic" src="../../portfolio-website/portfolio/images/deejaypic.jpg" alt="handsome man in glasses and blue hoodie"></span>
+								<span class="image main"><img id="deejaypic" src="images/deejaypic.jpg" alt="handsome man in glasses and blue hoodie"></span>
 								<p><a href="https://deejay.dev/">Check My Guy Out</a> </p>
 							</article>
 
